--- a/less/mixins.less
+++ b/less/mixins.less
@@ -33,9 +33,8 @@
         }
 
     .home .container .walk {
-        display: block;
-        
-        max-width: 100%;
+        display: grid;
+        grid-template-columns: repeat(1,1fr);
         padding: 0;
      
         .walk-text {
@@ -65,12 +64,17 @@
             }
         }
 
+        // .walk-img {
+        //     text-align: center;
+        // }
+
         .walk-img img {
             display: block;
-            min-width: 90vw;
-            border-radius: 20px;
             order: 1;
-            background-attachment: fixed;
+            margin: 0 auto;
+            min-width: 90vw;
+            text-align: justify;
+            border-radius: 20px;
         }
     }     /*    .walk    */
 }  /*    .phone    */
